grammar.bnf
PROGRAM ::= TOP_DECL*

TOP_DECL* ::= FUNC TOP_DECL*
TOP_DECL* ::= VAR TOP_DECL*
TOP_DECL* ::= ''

FUNC ::= fun symbol ( PARAMS? ) RET_TYPE { STMT* }
VAR ::= var symbol : TYPE = EXPR

COMMA? ::= ,
COMMA? ::= ''

PARAMS? ::= PARAM PARAM_NEXT*
PARAMS? ::= ''
PARAM_NEXT* ::= COMMA? PARAM_NEXT
PARAM_NEXT* ::= ''
PARAM_NEXT ::= PARAM PARAM_NEXT*
PARAM_NEXT ::= ...

PARAM ::= symbol : TYPE = EXPR

RET_TYPE ::= TYPE
RET_TYPE ::= non

TYPE ::= int
TYPE ::= str
TYPE ::= fun
TYPE ::= obj

STMT* ::= STMT STMT*
STMT* ::= ''

STMT ::= VAR
STMT ::= EXPR
STMT ::= IF
STMT ::= WHILE
STMT ::= RETURN
STMT ::= BREAK

RETURN ::= return EXPR
BREAK ::= break
WHILE ::= while EXPR { STMT* }
IF ::= if EXPR { STMT* } ELIF* ELSE?
ELIF* ::= elif EXPR { STMT* } ELIF*
ELIF* ::= ''
ELSE ::= else { STMT* }

EXPR ::= EXPR_ASSIGN

EXPR_ASSIGN ::= EXPR_LOGIC EXPR_ASSIGN_NEXT*
EXPR_ASSIGN_NEXT* ::= = EXPR_ASSIGN
EXPR_ASSIGN_NEXT* ::= ''

EXPR_LOGIC ::= EXPR_CMP EXPR_LOGIC_NEXT*
EXPR_LOGIC_NEXT* ::= EXPR_LOGIC_OP EXPR_CMP EXPR_LOGIC_NEXT*
EXPR_LOGIC_NEXT* ::= ''
EXPR_LOGIC_OP ::= or
EXPR_LOGIC_OP ::= and

EXPR_CMP ::= EXPR_ADD EXPR_CMP_NEXT*
EXPR_CMP_NEXT* ::= EXPR_CMP_OP EXPR_ADD EXPR_CMP_NEXT*
EXPR_CMP_NEXT* ::= ''
EXPR_CMP_OP ::= ==
EXPR_CMP_OP ::= !=
EXPR_CMP_OP ::= <=
EXPR_CMP_OP ::= >=
EXPR_CMP_OP ::= <
EXPR_CMP_OP ::= >

EXPR_ADD ::= EXPR_MULT EXPR_ADD_NEXT*
EXPR_ADD_NEXT* ::= EXPR_ADD_OP EXPR_MULT EXPR_ADD_NEXT*
EXPR_ADD_NEXT* ::= ''
EXPR_ADD_OP ::= +
EXPR_ADD_OP ::= -

EXPR_MULT ::= EXPR_UNARY EXPR_MULT_NEXT*
EXPR_MULT_NEXT* ::= EXPR_MULT_OP EXPR_UNARY EXPR_MULT_NEXT*
EXPR_MULT_NEXT* ::= ''
EXPR_MULT_OP ::= *
EXPR_MULT_OP ::= /
EXPR_MULT_OP ::= %

EXPR_UNARY ::= UNARY_OP* EXPR_POSTFIX
UNARY_OP* ::= + UNARY_OP*
UNARY_OP* ::= - UNARY_OP*
UNARY_OP* ::= ! UNARY_OP*
UNARY_OP* ::= ''

EXPR_POSTFIX ::= EXPR_PRIMARY POSTFIX*
POSTFIX* ::= POSTFIX_NEXT POSTFIX*
POSTFIX* ::= ''
POSTFIX_NEXT ::= . symbol
POSTFIX_NEXT ::= ( ARGS? ) 

ARGS? ::= EXPR ARG_NEXT*
ARGS? ::= ''
ARG_NEXT* ::= COMMA? EXPR ARG_NEXT*
ARG_NEXT* :: ''

EXPR_PRIMARY ::= ( EXPR )
EXPR_PRIMARY ::= VALUE

VALUE ::= <number>
VALUE ::= <string>
VALUE ::= <symbol>
VALUE ::= OBJECT
VALUE ::= nil

OBJECT ::= obj { PARAMS? }
